disabled copy paste feature

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center" id="play-area">
 
   <!-- Word & Input -->
   <div class="row">
