--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#ff9900">
-    <a class="navbar-brand" routerLink="/">Word Game</a>
+    <a class="navbar-brand" routerLink="/">Word Master</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
       aria-expanded="false" aria-label="Toggle navigation">
